WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34965
With hardware acceleration turned off, video frames never display if poster image is specified
https://bugs.webkit.org/show_bug.cgi?id=34965
Summary
With hardware acceleration turned off, video frames never display if poster i...
Simon Fraser (smfr)
Reported
2010-02-15 19:49:07 PST
Created
attachment 48785
[details]
Testcase (BWO image and video) When accelerated compositing is disabled, a video element with a poster image doesn't start showing the video once frames become available.
Attachments
Testcase (BWO image and video)
(529 bytes, text/html)
2010-02-15 19:49 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(4.98 KB, patch)
2010-02-15 20:03 PST
,
Simon Fraser (smfr)
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-02-15 19:49:30 PST
<
rdar://problem/7651526
>
Simon Fraser (smfr)
Comment 2
2010-02-15 20:03:10 PST
Created
attachment 48786
[details]
Patch
Eric Carlson
Comment 3
2010-02-15 20:27:59 PST
Comment on
attachment 48786
[details]
Patch Because updatePosterImage is now called for every video frame, it might make sense to change HTMLVideoElement::updatePosterImage so hasAvailableVideoFrame() is called before poster().isEmpty() as I assume it is cheaper as the later requires an allocation. r=me either way
Simon Fraser (smfr)
Comment 4
2010-02-16 14:04:58 PST
http://trac.webkit.org/changeset/54828
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug