third_party/WebKit/WebCore/html/HTMLMediaElement.cpp
@@ -665,8 +665,8 @@ void HTMLMediaElement::noneSupported()
 
     // 9 -Abort these steps. Until the load() method is invoked, the element won't attempt to load another resource.
 
-    if (isVideo())
-        static_cast<HTMLVideoElement*>(this)->updatePosterImage();
+    updatePosterImage();
+
     if (renderer())
         renderer()->updateFromElement();
 }
@@ -744,9 +744,7 @@ void HTMLMediaElement::setNetworkState(MediaPlayer::NetworkState state)
         else if (state == MediaPlayer::FormatError && m_loadState == LoadingFromSrcAttr)
             noneSupported();
 
-        if (isVideo())
-            static_cast<HTMLVideoElement*>(this)->updatePosterImage();
-
+        updatePosterImage();
         return;
     }
 
@@ -884,8 +882,8 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
         shouldUpdatePosterImage = true;
     }
 
-    if (shouldUpdatePosterImage && isVideo())
-        static_cast<HTMLVideoElement*>(this)->updatePosterImage();
+    if (shouldUpdatePosterImage)
+        updatePosterImage();
 
     updatePlayState();
 }
@@ -1507,6 +1505,8 @@ void HTMLMediaElement::mediaPlayerRepaint(MediaPlayer*)
     beginProcessingMediaPlayerCallback();
     if (renderer())
         renderer()->repaint();
+
+    updatePosterImage();
     endProcessingMediaPlayerCallback();
 }
 
