third_party/WebKit/WebCore/html/HTMLVideoElement.h
@@ -71,7 +71,6 @@ public:
     bool webkitSupportsFullscreen();
     bool webkitDisplayingFullscreen();
 
-    void updatePosterImage();
     bool shouldDisplayPosterImage() const { return m_shouldDisplayPosterImage; }
 
     void paint(GraphicsContext*, const IntRect&);
@@ -80,6 +79,7 @@ public:
 
 private:
     virtual bool hasAvailableVideoFrame() const;
+    virtual void updatePosterImage();
 
     OwnPtr<HTMLImageLoader> m_imageLoader;
     KURL m_posterURL;
